k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staysync
  labels:
    name: staysync
    app: staysync
